Registro usuario con numero movil

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/estilos.css">
-    <title>Document</title>
+    <title> El Buho</title>
 
 </head>
 <body>
@@ -26,7 +26,8 @@
             <div class="info-contenido">
                 <h2>LA TECNOLOGIA EN TUS MANOS</h2>
                 <p>Deja que nosotros nos ocupemos de tus problemas tecnologicos, mientras relajate y tomate un cafe bien cargado</p>
-                <button>Conectanos</button>
+                <button>Registrarse</button>
+                <input placeholder="Ingrese Numero Movil" type="number">
             </div>     
         </section>
         <section class="contenedor-servicio">
